[project]
authors = [{name = "kseuro", email = "kai.w.stewart@gmail.com"}]
dependencies = []
name = "agno-agents"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
agno_agents = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
pre-commit = ">=4.3.0,<5"
