[project]
authors = [{ name = "kseuro", email = "kai.w.stewart@gmail.com" }]
dependencies = []
name = "agno-agents"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
agno-agents = { path = ".", editable = true }

[tool.pixi.tasks]
news = "pixi run python src/news_aggregator/main.py"

[tool.pixi.dependencies]
python = "3.11.*"
pre-commit = ">=4.3.0,<5"
google-genai = ">=1.33.0,<2"
pip = ">=25.2,<26"
python-dotenv = ">=1.1.1,<2"
requests = ">=2.32.5,<3"
